--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,8 +11,22 @@
   height: 40vmin;
 }
 
-.more-info-logo {
+.delete-icon {
+  filter: grayscale(100%);
   opacity: 0.5;
+}
+.delete-icon:hover {
+  filter: none;
+  opacity: 1;
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .App-header {
